syntax = "proto3";

import "google/protobuf/struct.proto";

package apicore;

// Core API. Default port starts on [50051].
service CoreService {
    rpc Scan (CrawlParams) returns (ReportResponse) {} // non stream scanning allowing for full track up time for keep alive cost.
    rpc Crawl (CrawlParams) returns (stream ReportResponse) {} // stream the scan request and simply return.
}

// params to send when scanning pages.
message CrawlParams {
   string url = 1; // the url base of the crawl.
   string authorization = 2; // the authorization token.
   bool tld = 3; // include all TLDs.
   bool subdomains = 4; // include all subdomains.
   bool pageInsights = 5; // run page insights across scans.
}

// crawl page headers to set per request.
message Headers {
   string key = 1; // key of the header.
   string value = 2; // value of the key.
}

// upsert script params
message ScriptParams {
   bool editScript = 1; // should this edit the script?
   string url = 2; // page url for the request.
   Script script = 3; // pass in script object.
   string newScript = 4; // new script to replace content?
}

// meta details for the page to include extra supportive features. 
message IssueMeta {
   bool skipContentIncluded = 1; // add a skip content button onto the script if not found.
}

// script meta adjustments
message ScriptMeta {
   bool skipContentEnabled = 1; // is skip content enabled for the page
}

// info to use to gather all stats for the issues on the page.
message IssueInfo {
   int32 possibleIssuesFixedByCdn = 1; // possible issues that may be fixed using the cdn.
   int32 totalIssues = 2; // all of the page issues.
   int32 issuesFixedByCdn = 3; // how many issues that are fixed using the cdn.
   int32 errorCount = 4; // errors on the page.
   int32 warningCount = 5; // warnings on the page.
   int32 noticeCount = 6; // notices on the page that mainly used for info purposes.
   int32 adaScore = 7; // rough accessibility score.
   IssueMeta issueMeta = 8; // extra data on the issue.
}

// how fast the page loaded.
message PageLoadTime {
   int32 duration = 1; // duration in ms.
   string durationFormated = 2; // durations formatted to a readable message.
   string color = 3; // color indicator for the message.
}

// the issue that occured, either of type error, notice, warning in desc order.
message Issue {
   string code = 1; // wcag error code.
   string type = 2; // warning, error, or notice.
   int32 typeCode = 3; // error code.
   string message = 4; // the issue with possible recommendations.
   string context = 5; // the element of the issue.
   string selector = 6; // the html selector.
   string runner = 7; // the runner type for the scan.
   int32 recurrence = 8; // how many times the issue appeared.
}

// javascript that runs to attempt to fix the page.
message Script {
   string pageUrl = 1; // the page url that ran the request.
   string domain = 2; // the domain of the page.
   string script = 3; // the fix script body contents without <script></script>.
   string cdnUrlMinified = 4; //  the cdn url for accessibility fixes custom to the page minified.
   string cdnUrl = 5; // the cdn url for accessibility fixes custom to the page.
   bool cdnConnected = 6; // determine if accessibility cdn is connected.
   IssueMeta issueMeta = 7; // extra info to determine stats on the issues.
   ScriptMeta scriptMeta = 8; // meta information to help track script stats.
}

// fields that build that Website that is treated as a Page.
message Page {
   string domain = 1; // the domain for the request [example.com].
   string url = 2; // the url of the request with http or https
   bool cdnConnected = 3; // is the cdn for accessibility fixes connected on the page.
   PageLoadTime pageLoadTime = 4; // page load time.
   google.protobuf.Struct insight = 5; // the json details from lighthouse
   IssueInfo issuesInfo = 6; // issues on the page.
   string lastScanDate = 7; // the last date of the scan.
   repeated Issue issues = 8; // all of the issues that relate to the page.
   Script script = 9; // the page script body contents without <script> tags.
   uint32 userId = 10; // the user that made the request.
}

// send streamed response
message ReportResponse {
   Page data = 1; // the web results.
}